--- a/locales/ja.json
+++ b/locales/ja.json
@@ -27,7 +27,8 @@
         "settings": "設定",
         "help": "ヘルプ"
       }
-    }
+    },
+    "NewAffirmation": "新規アファメーション投稿"
   },
   "error": {
     "Unauthorized": "認証に失敗しました",
