--- a/locales/ja.json
+++ b/locales/ja.json
@@ -28,7 +28,8 @@
         "help": "ヘルプ"
       }
     },
-    "NewAffirmation": "新規アファメーション投稿"
+    "NewAffirmation": "新規投稿",
+    "EditAffirmation": "編集"
   },
   "error": {
     "Unauthorized": "認証に失敗しました",
